# Scraping_ycombinator

./: .gitignore  README.md  dummy.py  main.py  pyproject.toml  readme.txt  requirements.txt  scrape.py  trial_07_January_2025.csv  trial_07_January_2025.xlsx  trial_24_December_2024.csv  trial_24_December_2024.xlsx  util.py  ycombinator company scraping result_02_December_2024.xlsx  ycombinator.db
db_config/: __init__.py  db_format.py
sc/: __init__.py  driver_management.py  scrape.py  util.py
