[project]
name = "ycombinator-scraper"
version = "0.1.0"
description = "A tool to scrape data from ycombinator.com"
authors = [
    {name = "Apri"}
]
license = {file = "License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
